<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="splash_title">My Nanodegree Apps!</string>
    <string name="app_name_1">Popular Movies App</string>
    <string name="app_name_2">Scores App</string>
    <string name="app_name_3">Library App</string>
    <string name="app_name_4">Build it bigger</string>
    <string name="app_name_5">XYZ Reader</string>
    <string name="my_own_app_name">CapStone: my own app</string>
    <string name="toast_label">This button will launch</string>
    <string name="settings_label">Settings</string>
    <!-- Popular movies app -->
    <string name="title_activity_discover_movies">Pop Movies</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="movie_sort_mode_label">Sort movies by</string>
    <string name="movie_sort_key">sorting</string>
    <string name="pref_sorting_default">popularity.desc</string>
    <string name="add_to_favorites">Mark as favorite</string>
    <string name="remove_from_favorites">Unmark as favorite</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum</string>
    <string name="long_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie quam non ligula vehicula, at feugiat felis varius. Quisque mollis libero vitae massa aliquam mollis. Praesent ac ante rhoncus, tristique massa vitae, ultrices nibh. Aliquam dapibus, tortor vitae varius tristique, augue purus pretium libero, at ultricies lectus arcu nec sem. Proin a felis eu ligula mattis fermentum eget eget nisi. Nulla convallis ac ex sed dapibus. Mauris volutpat mollis venenatis. Vestibulum ac cursus erat, vitae auctor metus. Sed tempus felis vitae lectus imperdiet sodales. Sed nunc mauris, mollis eget mauris ac, vestibulum accumsan risus. Fusce vel ipsum felis. Duis sodales fringilla nisi, sit amet placerat risus suscipit a. Sed tempus tristique molestie. Maecenas suscipit felis vitae augue sodales rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
    <string name="tap_for_details">Tap on a movie to view details</string>
    <string name="movie_argument_name" translatable="false">parentMovie</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="youtube_watch_url">https://www.youtube.com/watch?v=</string>
    <string name="tap_play_button">Tap play button to play</string>
    <!-- Key name for movies sorting mode in Shared Preferences -->
    <string name="pref_sorting_mode" translatable="false">sorting_mode</string>
    <!-- -->

</resources>
