<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.nikogalla.myportfolio.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_title"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/title_margin_bottom"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/btPopularMovies"
                android:text="@string/app_name_1"
                style="@style/MaterialSplashButton"
                android:background="@color/colorPrimaryMovies"
                >
            </Button>
            <Button
                android:id="@+id/btSecondApp"
                android:text="@string/app_name_2"
                style="@style/MaterialSplashButton"
                >
            </Button>
            <Button
                android:id="@+id/btThirdApp"
                android:text="@string/app_name_3"
                style="@style/MaterialSplashButton"
                >
            </Button>
            <Button
                android:id="@+id/btFourthApp"
                android:text="@string/app_name_4"
                style="@style/MaterialSplashButton"
                >
            </Button>
            <Button
                android:id="@+id/btFifthApp"
                android:text="@string/app_name_5"
                style="@style/MaterialSplashButton"
                >
            </Button>
            <Button
                android:id="@+id/btMyOwnApp"
                android:text="@string/my_own_app_name"
                style="@style/MaterialSplashButton"
                android:background="@color/colorAccentSplash"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
